<resources>
    <string name="app_name">LapTimer</string>

    <string name="default_clock_string">00:00</string>
    <string name="default_counter">0</string>

    //main activity action bar
    <string name="main_actionbar_addition">Add</string>
    <string name="main_activity_deletion">Delete</string>

    //list items
    <string name="dummy_label_list_item">Dummy String</string>
    <string name="rounds_list_item">rounds</string>
    <string name="description_1_list_item">timers for a duration of </string>
    <string name="description_2_list_item">seconds</string>
    <string name="default_count_empty">0</string>
    <!-- content descriptors-->
    <string name="cd_startButton_list_item"> Starts the timer</string>
    <string name="cd_expandbutton_list_item">Expands/retracts the view</string>
    <!--actionbar -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>

    <!-- modifier activity-->
    <string name="filler_edit_text">Give a name!</string>
    <string name="repetition_counter_label">Repetitions</string>
    <string name="title_modification">Modify Timer</string>
    <string name="title_new_timer_definition">New Timer</string>

    <!-- Timer customization -->
    <string name="default_timer_name">New Timer Sequence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- ======================================================================================= -->
    <!--clock activity layout-->
    <string name="activity_clock_finished_timers_label">Finished</string>
    <string name="activity_clock_pending_timer_label">Pending</string>
    <string name="activity_clock_next_timer_label">Next Timer</string>


    <!-- ======================================================================================= -->
    <!--Leaf list layout-->
    <!-- Button descriptors -->
    <string name="leaf_repetition_decrement_button_description">Decrease the repetition of the timer</string>
    <string name="leaf_repetition_increment_button_description">Increase the repetition of the timer</string>
    <string name="leaf_delete_button_description">delete the timer</string>
    <!-- default string -->
    <string name="leaf_timer_text_view_default_text">00:00</string>
    <string name="leaf_repetition_count_text_default_text">1</string>
</resources>
