<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/timer_customization_list_item_leaf"
    android:layout_width="match_parent"
    android:background="@drawable/list_container_coded_bg_white"
    android:layout_height="@dimen/timer_customization_list_item_leaf_height"
    android:layout_marginTop="4dp">

    <TextView
        android:id="@+id/leaf_timer_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:textSize="@dimen/leaf_timer_text_view_font_size"
        android:text="@string/leaf_timer_text_view_default_text"
        android:textColor="#ffffff"
        android:paddingStart="@dimen/leaf_timer_text_padding_start"
        android:paddingEnd="@dimen/leaf_timer_text_padding_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leaf_Repetition_counter_view_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leaf_Repetition_counter_view_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leaf_delete_button"
        app:layout_constraintStart_toEndOf="@id/leaf_timer_text_view"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/leaf_repetition_decrement_button"
            android:contentDescription="@string/leaf_repetition_decrement_button_description"
            android:layout_width="@dimen/leaf_repetition_decrement_button_width"
            android:layout_height="match_parent"
            android:background="@drawable/decrement_button_vector"
            android:backgroundTint="#FFff0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/leaf_repetition_count_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/leaf_repetition_count_text"
            android:layout_width="@dimen/leaf_repetition_count_text_width"
            android:layout_height="match_parent"
            android:textSize="@dimen/leaf_repetition_count_text_font_size"
            android:text="@string/leaf_repetition_count_text_default_text"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/leaf_repetition_increment_button"
            app:layout_constraintStart_toEndOf="@id/leaf_repetition_decrement_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/leaf_repetition_increment_button"
            android:contentDescription="@string/leaf_repetition_increment_button_description"
            android:layout_width="@dimen/leaf_repetition_increment_button_width"
            android:layout_height="match_parent"
            android:background="@drawable/increment_button_vector"
            android:backgroundTint="#FF00ff00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/leaf_repetition_count_text"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/leaf_delete_button"
        android:contentDescription="@string/leaf_delete_button_description"
        android:layout_width="@dimen/leaf_delete_button_dimension"
        android:layout_height="@dimen/leaf_delete_button_dimension"
        android:background="@android:drawable/ic_menu_delete"
        android:layout_margin="@dimen/leaf_delete_button_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/leaf_Repetition_counter_view_group"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
