<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timer_customization_list_item_subtree"
    android:background="@drawable/list_container_coded_bg_red"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timer_customization_list_item_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            android:background="@color/dark_bg_16"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/timer_leaf_layout"
            app:layout_constraintBottom_toTopOf="@id/timer_customization_list_item_recycler_add_button_frame"
            android:layout_marginBottom="4dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timer_customization_list_item_recycler_add_button_frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/timer_customization_list_item_recycler_add_button_frame_height"
            android:background="@drawable/solid_button_nonstroke_black"
            android:layout_margin="2dp"
            app:layout_constraintTop_toBottomOf="@id/timer_customization_list_item_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/timer_customization_list_item_repetition_controls_container_frame">

            <ImageButton
                android:id="@+id/timer_customization_list_item_recycler_add_button"
                android:layout_width="@dimen/timer_customization_list_item_recycler_add_button_height"
                android:layout_height="@dimen/timer_customization_list_item_recycler_add_button_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@android:drawable/ic_menu_add"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timer_customization_list_item_repetition_controls_container_frame"
            android:layout_width="0dp"
            android:layout_height="@dimen/timer_customization_list_item_repetition_controls_container_frame_height"
            android:background="@drawable/solid_button_nonstroke_black"
            android:layout_margin="2dp"
            app:layout_constraintTop_toBottomOf="@id/timer_customization_list_item_recycler_add_button_frame"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/timer_customization_list_item_subtree_delete_button_frame"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageButton
                android:id="@+id/subtree_repetition_decrement_button"
                android:contentDescription="@string/leaf_repetition_decrement_button_description"
                android:layout_width="@dimen/leaf_repetition_decrement_button_width"
                android:layout_height="match_parent"
                android:background="@drawable/decrement_button_vector"
                android:backgroundTint="#FFff0000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/subtree_repetition_count_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtree_repetition_count_text"
                android:layout_width="@dimen/leaf_repetition_count_text_width"
                android:layout_height="match_parent"
                android:textSize="@dimen/leaf_repetition_count_text_font_size"
                android:text="@string/leaf_repetition_count_text_default_text"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/subtree_repetition_increment_button"
                app:layout_constraintStart_toEndOf="@id/subtree_repetition_decrement_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/subtree_repetition_increment_button"
                android:contentDescription="@string/leaf_repetition_increment_button_description"
                android:layout_width="@dimen/leaf_repetition_increment_button_width"
                android:layout_height="match_parent"
                android:background="@drawable/increment_button_vector"
                android:backgroundTint="#FF00ff00"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/subtree_repetition_count_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/timer_customization_list_item_subtree_delete_button_frame"
            android:layout_width="0dp"
            android:layout_height="@dimen/timer_customization_list_item_delete_button_frame_height"
            android:background="@drawable/solid_button_nonstroke_black"
            android:layout_margin="2dp"
            app:layout_constraintTop_toBottomOf="@id/timer_customization_list_item_recycler_add_button_frame"
            app:layout_constraintStart_toEndOf="@id/timer_customization_list_item_repetition_controls_container_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/subtree_delete_button"
                android:contentDescription="@string/leaf_delete_button_description"
                android:layout_width="@dimen/leaf_delete_button_dimension"
                android:layout_height="@dimen/leaf_delete_button_dimension"
                android:background="@android:drawable/ic_menu_delete"
                android:layout_margin="@dimen/leaf_delete_button_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>